--- a/ac/package.json
+++ b/ac/package.json
@@ -1,7 +1,6 @@
 {
   "name": "ac",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +9,6 @@
   "license": "ISC",
   "dependencies": {
     "json-server": "^0.17.3"
-  }
+  },
+  "description": ""
 }
